@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class VaccinationCenter {
  - name
  - address
  - email
  - phoneNumber
}

class WaitingRoom {
}

class Appointment {
  - date
  - time
  - state
}

class SNSUser {
  - name
  - snsUserNumber
  - birthDate
  - sex
  - phoneNumber
}

class Receptionist {
  - employeeId
  - name
}

class Arrival {
  - arrivalDate
  - arrivalTime
}

VaccinationCenter "1" -- "1" WaitingRoom : has >
WaitingRoom "1" -- "*" Arrival : contains >
Arrival "1" -- "1" Appointment : related to >
Appointment "*" -- "1" SNSUser : scheduled for >
Receptionist "1" -- "*" Arrival : registers >

@enduml